--- a/spec/dummy/app/views/site/index.html.erb
+++ b/spec/dummy/app/views/site/index.html.erb
@@ -1,11 +1,10 @@
-<h2 class="header"><%= phrase('site.index.header') %></h2>
-
-<div><%= phrase('site.index.intro') %></div>
-
 <div><%= t('site.index.footer') %></div>
 
 <div><%= phrase('test', scope: 'models.errors') %></div>
 
 <div><%= phrase 'test', scope: :site %></div>
+
+<div><%= phrase @page, :title %></div>
+<div><%= phrase @page, :detail %></div>
 
 <div><%= distance_of_time_in_words(Time.now, Time.now) %></div>
